--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -5,4 +5,4 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: Print to console
-        run: Hello Nikita 
+        run: echo Hello Nikita 
