--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -6,3 +6,7 @@ jobs:
     steps: 
       - name: Print to console
         run: echo Hello Nikita 
+      - name: Print few lines
+        run: |
+          echo First line
+          echo First line
